salvia_macro/tests/query_ui/fail/return_future.stderr
error: #[query]: can only be applied to async functions
  --> $DIR/return_future.rs:23:4
   |
23 | fn f(_cx: &QueryContext) -> A {
   |    ^
